--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,6 +1,6 @@
 // -----------------------
 [class*="header__container"] {
-   max-width: 1080px;
+   max-width: 1200px;
    margin: 0 auto;
    padding-left: 15px;
    padding-right: 15px;
@@ -15,7 +15,7 @@
    width: 100%;
    z-index: 50;
    border-bottom: 1px solid #000;
-   background: #c2c2c2;
+   // background: #c2c2c2;
 
    &::before {
       content: "";
@@ -25,7 +25,7 @@
       width: 100%;
       height: 70px;
       border-bottom: 1px solid #000;
-      background: #c2c2c2;
+      // background: #c2c2c2;
       z-index: 2;
    }
 
