--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
    padding: 130px 0 230px 0;
-   background: url('../img/slide1.png') center / cover no-repeat ;
+   // background: url('../img/slide1.png') center / cover no-repeat ;
    // min-height: 712px;
    display: flex;
    text-align: left;
@@ -48,7 +48,7 @@
       content: ' ';
       left: 0;
       top: 0;
-      background: url('../img/hero-dots.png') center / cover no-repeat;
+      // background: url('../img/hero-dots.png') center / cover no-repeat;
       width: 100%;
       height: 100%;
       z-index: 1;
@@ -59,7 +59,7 @@
       content: ' ';
       left: 50%;
       bottom: -52px;
-      background: url('../img/hero-line.png') no-repeat;
+      // background: url('../img/hero-line.png') no-repeat;
       width: 15px;
       height: 104px;
       z-index: 2;
