--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -130,7 +130,7 @@
    // .menu__item
    &__item {
       &:last-child {
-         background: $blueDark;
+         background: $buttonColor;
          border-radius: 15px;
          padding: 10px 20px;
          color: #fff;
