--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -59,7 +59,7 @@ $heroTitle: #fff;
    text-transform: uppercase;
 
    background: $buttonColor;
-   border: 2px solid $buttonColor;
+   // border: 2px solid $buttonColor;
    border-radius: 30px;
    padding: 26px 58px;
 
