--- a/css/style.css
+++ b/css/style.css
@@ -83,17 +83,23 @@ h1, h2, h3, h4, h5, h6 {
 ._button {
   font-family: "Inter", sans-serif;
   font-style: normal;
-  font-weight: 600;
-  font-size: 13px;
-  line-height: 13px;
-  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
+  z-index: 5;
   background: linear-gradient(112.62deg, #8D1CFE 29.4%, #0038ED 105.15%);
-  border-radius: 30px;
-  padding: 26px 58px;
-  transition: all 0.3s ease-in;
+  border-radius: 50px;
+  padding: 16px 32px;
+  transition: all 0.3s ease;
 }
 ._button:hover {
   background: #1046ce;
+}
+
+@media (max-width: 767.98px) {
+  ._button-desctop {
+    display: none;
+  }
 }
 
 ._button-center {
@@ -209,7 +215,6 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   width: 100%;
   z-index: 50;
-  border-bottom: 1px solid #000;
 }
 .header::before {
   content: "";
@@ -217,8 +222,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   width: 100%;
-  height: 70px;
-  border-bottom: 1px solid #000;
+  height: 80px;
   z-index: 2;
 }
 .header__container {
@@ -226,7 +230,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   justify-content: space-between;
   gap: 15px;
-  min-height: 70px;
+  min-height: 80px;
 }
 @media (max-width: 767.98px) {
   .header .header__container {
@@ -251,7 +255,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 100%;
     top: 0;
     left: -110%;
-    background-color: rgba(194, 194, 194, 0.95);
+    background-color: rgba(0, 0, 0, 0.95);
     padding: 100px 15px 20px 0px;
     transition: left 0.3s;
     overflow: auto;
@@ -300,21 +304,26 @@ h1, h2, h3, h4, h5, h6 {
 }
 .menu__item:last-child {
   background: linear-gradient(112.62deg, #8D1CFE 29.4%, #0038ED 105.15%);
-  border-radius: 15px;
-  padding: 10px 20px;
+  border-radius: 50px;
+  padding: 16px 32px;
   color: #fff;
   transition: color 0.3s;
   cursor: pointer;
 }
 .menu__item:last-child:hover {
-  color: aqua;
+  background: #1046ce;
+}
+@media (min-width: 767.98px) {
+  .menu__item:last-child {
+    display: none;
+  }
 }
 .menu__link {
-  font-size: 18px;
+  font-size: 16px;
   transition: color 0.3s;
 }
 .menu__link:hover {
-  color: aqua;
+  color: #1046ce;
 }
 .menu__icon {
   display: none;
