--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,7 +14,7 @@
    left: 0;
    width: 100%;
    z-index: 50;
-   border-bottom: 1px solid #000;
+   // border-bottom: 1px solid #000;
    // background: #c2c2c2;
 
    &::before {
@@ -23,8 +23,8 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 70px;
-      border-bottom: 1px solid #000;
+      height: 80px;
+      // border-bottom: 1px solid #000;
       // background: #c2c2c2;
       z-index: 2;
    }
@@ -35,7 +35,7 @@
       align-items: center;
       justify-content: space-between;
       gap: 15px;
-      min-height: 70px;
+      min-height: 80px;
    }
 
    @media (max-width: $breakpoint768) {
@@ -71,7 +71,8 @@
          height: 100%;
          top: 0;
          left: -110%;
-         background-color: rgba(194, 194, 194, 0.95);
+         // background-color: rgba(194, 194, 194, 0.95); // White
+         background-color: rgba(0, 0, 0, 0.95); // Black
          padding: 100px 15px 20px 0px;
          transition: left .3s;
          overflow: auto;
@@ -131,25 +132,29 @@
    &__item {
       &:last-child {
          background: $buttonColor;
-         border-radius: 15px;
-         padding: 10px 20px;
-         color: #fff;
+         border-radius: 50px;
+         padding: 16px 32px;
+         color: $primary;
          transition: color .3s;
          cursor: pointer;
 
          &:hover {
-            color: aqua;
+            background: $buttonColorHover;
+         }
+
+         @media (min-width: $breakpoint768){
+            display: none;
          }
       }
    }
 
    // .menu__link
    &__link {
-      font-size: 18px;
+      font-size: 16px;
       transition: color .3s;
 
       &:hover {
-         color: aqua;
+         color: $buttonColorHover;
       }
 
    }
