--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -53,20 +53,27 @@ $heroTitle: #fff;
 ._button {
    font-family: 'Inter', sans-serif;
    font-style: normal;
-   font-weight: 600;
-   font-size: 13px;
-   line-height: 13px;
-   text-transform: uppercase;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 16px;
+   z-index: 5;
+   // text-transform: uppercase;
 
    background: $buttonColor;
    // border: 2px solid $buttonColor;
-   border-radius: 30px;
-   padding: 26px 58px;
+   border-radius: 50px;
+   padding: 16px 32px;
 
-   transition: all .3s ease-in;
+   transition: all .3s ease;
 
    &:hover {
       background: $buttonColorHover;
+   }
+}
+
+._button-desctop {
+   @media (max-width: $breakpoint768){
+      display: none;
    }
 }
 
