--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -32,11 +32,22 @@ $heroTitle: #fff;
 ._title {
    font-family: 'Inter', sans-serif;
    font-style: normal;
-   font-weight: 900;
-   font-size: 40px;
-   line-height: 44px;
+   font-weight: 800;
+   font-size: 94px;
+   line-height: 90px;
+   letter-spacing: -2px;
    text-transform: uppercase;
    color: $titleColor;
+}
+
+._title-section {
+   font-weight: 700;
+   font-size: 48px;
+   line-height: 58px;
+   
+   letter-spacing: -0.02em;
+   
+   color: $primary;   
 }
 
 ._subtitle {
@@ -76,7 +87,6 @@ $heroTitle: #fff;
       display: none;
    }
 }
-
 ._button-center {
    display: flex;
    justify-content: center;
