--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,33 +1,61 @@
 .hero {
-   padding: 130px 0 230px 0;
+   padding: 80px 0 30px 0;
    // background: url('../img/slide1.png') center / cover no-repeat ;
    // min-height: 712px;
-   display: flex;
-   text-align: left;
+   display: block;
    position: relative;
-   z-index: 2;
+   z-index: 3;
    // align-items: center;
-
-   font-family: 'Raleway', sans-serif;
-
-   &__suptitle {
-      font-weight: 300;
-      font-size: 40px;
-      line-height: 40px;
-      text-transform: uppercase;
-      color: $primary;
    
-      margin-bottom: 25px;
+   &__content {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+   }
+
+   // &__suptitle {
+   //    font-weight: 300;
+   //    font-size: 40px;
+   //    line-height: 40px;
+   //    text-transform: uppercase;
+   //    color: $primary;
+   
+   //    margin-bottom: 32px;
+   // }
+
+   &__container {
+      display: flex;
+      // justify-content: space-between;
+      gap: 30px;
    }
 
    &__title {
+      position: relative;
       font-weight: 900;
       font-size: 75px;
       line-height: 90px;
-      text-transform: uppercase;
+      // text-transform: uppercase;
       color: $primary;
 
       margin-bottom: 25px;
+
+      &::after {
+         position: absolute;
+         content: ' ';
+         left: 45%;
+         bottom: 0;
+         background: url('../img/hero-star.svg') no-repeat;
+         width: 85px;
+         height: 85px;
+         // z-index: 2;
+      }
+   }
+
+   &__title-color {
+      background: -webkit-linear-gradient(315deg, #8D1CFE, #0038ED);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
    }
    
    &__subtitle {
@@ -35,34 +63,53 @@
       font-weight: 400;
       font-size: 16px;
       line-height: 26px;
-      text-align: center;
       color: $primary;
 
-      max-width: 688px;
+      max-width: 418px;
       padding-bottom: 50px; 
-      margin: 0 auto;
    }
 
    &::before {
       position: absolute;
       content: ' ';
-      left: 0;
-      top: 0;
-      // background: url('../img/hero-dots.png') center / cover no-repeat;
+      left: -20%;
+      top: -20%;
+      background: url('../img/shadow-bg.png') center / cover no-repeat;
+      filter: blur(25px);
       width: 100%;
       height: 100%;
-      z-index: 1;
+      z-index: -1;
    }
 
-   &::after {
-      position: absolute;
-      content: ' ';
-      left: 50%;
-      bottom: -52px;
-      // background: url('../img/hero-line.png') no-repeat;
-      width: 15px;
-      height: 104px;
+   &__right {
+      z-index: 1;
+      padding: 60px 40px 60px 0;
+      position: relative;
+   }
+
+   &__images {
       z-index: 2;
+      position: relative;
+      &::before {
+         position: absolute;
+         content: ' ';
+         left: -17%;
+         top: -10%;
+         background: url('../img/hero-img/image-2.png') center / cover no-repeat;
+         width: 367px;
+         height: 438px;
+         z-index: -1;
+      }
+      &::after {
+         position: absolute;
+         content: ' ';
+         right: -15%;
+         bottom: -13%;
+         background: url('../img/hero-img/image-3.png') center / cover no-repeat;
+         width: 367px;
+         height: 438px;
+         z-index: -1;
+      }
    }
 
    @media (max-width: $breakpoint768) {
@@ -74,5 +121,56 @@
          font-size: 30px;
          text-align: center;
       }
+   }
+}
+
+// Button
+._button-hero {
+   width: 120px;
+   white-space: nowrap;
+   padding: 47px 10px;
+   font-family: 'Inter', sans-serif;
+   font-style: normal;
+   font-weight: 600;
+   font-size: 16px;
+   line-height: 26px;
+   color: $primary;
+
+   background: $buttonColor;
+   border-radius: 100%;
+   transition: all .3s ease;
+
+   &:hover {
+      background: $buttonColorHover;
+   }
+}
+
+// Numbers
+.numbers {
+   margin-top: 70px;
+   display: flex;
+   gap: 30px;
+
+   // .numbers__item
+   &__item {
+   }
+
+   // .numbers__title
+   &__title {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      letter-spacing: -0.003em;
+
+      color: $primary;
+   }
+
+   // .numbers__number
+   &__number {
+      font-weight: 700;
+      font-size: 28px;
+      line-height: 34px;
+      
+      color: $primary;
    }
 }
