--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
+  color: #fff;
   z-index: 5;
   background: linear-gradient(112.62deg, #8D1CFE 29.4%, #0038ED 105.15%);
   border-radius: 50px;
@@ -117,16 +118,8 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
 }
 
-._button-white {
-  color: #fff;
-}
-
 ._button-dark {
   color: #1046ce;
-}
-
-._button-yellow {
-  color: #FCDB5A;
 }
 
 .slider {
@@ -476,27 +469,77 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.block {
-  margin: 50px 0;
+.drop .buttons-list {
+  padding: 35px 0;
 }
-.block__list {
-  border-radius: 15px;
-  border: 1px solid #000;
-  padding: 20px 0;
+.drop .buttons-list__item {
+  margin-right: 22px;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
+  color: #fff;
+  background: #1046ce;
+  border-radius: 50px;
+  padding: 16px 32px;
+  transition: all 0.3s ease;
+}
+.drop .buttons-list__item:hover {
+  background: linear-gradient(112.62deg, #8D1CFE 29.4%, #0038ED 105.15%);
+}
+.drop .drop__list {
   display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  flex: 0 1 23.75%; /* 285px/1200 */
+}
+.drop .card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
+  gap: 10px;
+  background: #fff;
+  border-radius: 8px;
+}
+.drop .card__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 34px;
+  letter-spacing: -0.02em;
+  color: #242323;
+}
+.drop .card__price-block {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
   align-items: center;
-  gap: 50px;
 }
-@media (max-width: 767.98px) {
-  .block__list {
-    flex-wrap: wrap;
-  }
+.drop .card__price span {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: -0.02em;
+  color: #815EE3;
 }
-.block__item {
-  flex: 1 1 50%;
+.drop .card__icon {
+  margin-right: 6px;
 }
-.block .block__item img {
-  max-width: 100%;
+.drop .card__collection {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: -0.02em;
+  color: #989898;
+}
+.drop .card__footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+._buttons-active {
+  background: linear-gradient(112.62deg, #8D1CFE 29.4%, #0038ED 105.15%);
 }
 
 .block-img-text {
